--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,15 @@
     "html5-qrcode": "^2.3.8",
     "pinia": "^3.0.4",
     "socket.io-client": "^4.8.3",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.10",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
