--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "echarts": "^6.0.0",
     "html5-qrcode": "^2.3.8",
     "pinia": "^3.0.4",
+    "qrcode.vue": "^3.8.0",
     "socket.io-client": "^4.8.3",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
