--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -21,11 +21,12 @@ spring:
       connection-error-retry-attempts: 1
       # 失败后重试间隔 (毫秒)
       time-between-connect-error-millis: 1000
-  redis:
-    host: localhost
-    port: 6379
-    password: 
-    database: 0
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password:
+      database: 0
 
 wechat:
   mp:
